# actix-website

./: .cobalt.yml  .deploy.sh  .gitignore  .prettierrc.json  .prettierrc.yaml  .tool-versions  .travis.yml  CNAME  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  _cobalt.yml  build.rs  community.md  communitySidebars.ts  config.toml  docusaurus.config.js  docusaurus.config.ts  index.liquid  justfile  more.md  package-lock.json  package.json  peek.yml  pnpm-lock.yaml  sidebars.js  sidebars.ts  tsconfig.json  tutorials.md  vars.js  vars.ts
examples/: Cargo.toml  rustfmt.toml
examples/application/: Cargo.toml
examples/application/src/: app.rs  combine.rs  config.rs  config_app.rs  main.rs  mutable_state.rs  scope.rs  state.rs  vh.rs
examples/async-handlers/: Cargo.toml
examples/async-handlers/src/: async_stream.rs  main.rs  stream.rs
examples/autoreload/: Cargo.toml
examples/autoreload/src/: main.rs
examples/databases/: Cargo.toml
examples/databases/src/: main.rs
examples/easy-form-handling/: Cargo.toml
examples/easy-form-handling/src/: main.rs
examples/easy-form-handling/static/: form.html
examples/either/: Cargo.toml
examples/either/src/: main.rs
examples/errors/: Cargo.toml
examples/errors/src/: helpers.rs  logging.rs  main.rs  override_error.rs  recommend_one.rs  recommend_two.rs
examples/extractors/: Cargo.toml
examples/extractors/src/: custom_handler.rs  form.rs  form_optional.rs  json_one.rs  json_two.rs  main.rs  multiple.rs  path_one.rs  path_three.rs  path_two.rs  query.rs
examples/flexible-responders/: Cargo.toml
examples/flexible-responders/src/: main.rs
examples/front-page/: Cargo.toml
examples/front-page/easy-form-handling/: Cargo.toml
examples/front-page/flexible-responders/: Cargo.toml
examples/front-page/main-example/: Cargo.toml
examples/front-page/powerful-extractors/: Cargo.toml
examples/front-page/request-routing/: Cargo.toml
examples/getting-started/: Cargo.toml
examples/getting-started/src/: main.rs
examples/http1/: Cargo.toml
examples/http1/src/: main.rs
examples/http2/: Cargo.toml
examples/http2/src/: main.rs
examples/http20/: Cargo.toml
examples/http20/src/: main.rs
examples/main-example/: Cargo.toml
examples/main-example/src/: main.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: authorization.rs  default_headers.rs  errorhandler.rs  from_fn.rs  logger.rs  main.rs  main_auth_middleware.rs  wrap_fn.rs  (+1 more)
examples/og_databases/: Cargo.toml
examples/powerful-extractors/: Cargo.toml
examples/request-handlers/: Cargo.toml
examples/request-routing/: Cargo.toml
examples/requests/: Cargo.toml
examples/responder-trait/: Cargo.toml
examples/responses/: Cargo.toml
examples/sea-orm-databases/: Cargo.toml
examples/sentry/: Cargo.toml
examples/server/: Cargo.toml
examples/shuttle/: Cargo.toml
examples/static-files/: Cargo.toml
examples/testing/: Cargo.toml
examples/url-dispatch/: Cargo.toml
examples/websockets/: Cargo.toml
(+2306 files in other folders)
