[workspace]
members = [
  "application",
  "async-handlers",
  "easy-form-handling",
  "either",
  "errors",
  "extractors",
  "flexible-responders",
  "getting-started",
  "http1",
  "http2",
  "main-example",
  "middleware",
  "powerful-extractors",
  "request-handlers",
  "request-routing",
  "requests",
  "responder-trait",
  "responses",
  "server",
  "static-files",
  "testing",
  "url-dispatch",
  "websockets",
]
exclude = ["databases", "sentry"]
