[workspace]
resolver = "2"
members = [
  "application",
  "async-handlers",
  "databases",
  "easy-form-handling",
  "either",
  "errors",
  "extractors",
  "flexible-responders",
  "getting-started",
  "http2",
  "main-example",
  "middleware",
  "powerful-extractors",
  "request-handlers",
  "request-routing",
  "requests",
  "responder-trait",
  "responses",
  "sea-orm-databases",
  "server",
  "shuttle",
  "static-files",
  "testing",
  "url-dispatch",
  "websockets",
]

[workspace.package]
edition = "2024"
