[package]
name = "sea-orm-databases"
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.11", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
